<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_page"
    tools:context=".LogInActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="170dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/thosearoundme_logo" />

    <RelativeLayout
        android:id="@+id/relativeLayoutInnerLogin"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/gradient_bg"
        android:orientation="vertical" >      
        
        <EditText
            android:id="@+id/etEMailIdLogIn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_box"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:padding="6dp"
            android:textCursorDrawable="@null"
            android:textColor="#000000" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etPwdLogIn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/etEMailIdLogIn"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/text_box"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textCursorDrawable="@null"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:layout_below="@id/etPwdLogIn"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/proceed_button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/appVersionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:text="@string/app_version"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnSignUpLogin"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:layout_above="@id/appVersionTxt"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/proceed_button"
            android:text="@string/signup"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnSignUpLogin"
            android:layout_centerInParent="true"
            android:layout_gravity="center"          
            android:layout_marginTop="25dp"
            android:text="@string/signup_suggestion"
            android:textColor="@android:color/white" />
        
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_centerInParent="true"
            android:layout_gravity="center"          
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/forgot_passwprd"
            android:textColor="@android:color/white" />
        
    </RelativeLayout>

   	<Button
   	    android:id="@+id/delete_user"
   	    android:layout_width="140dp"
   	    android:layout_height="35dp"
   	    android:layout_alignParentTop="true"
   	    android:layout_alignRight="@+id/relativeLayoutInnerLogin"
   	    android:layout_marginTop="16dp"
   	    android:layout_toRightOf="@+id/imageView1"
   	    android:background="@drawable/proceed_button"
   	    android:gravity="center"
   	    android:text="@string/delete"
   	    android:textColor="@android:color/white" />

</RelativeLayout>