<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/myProfile"
        android:showAsAction="never"
        android:title="@string/my_profile">
    </item>
    <item
        android:id="@+id/myTeams"
        android:showAsAction="never"
        android:title="@string/my_teams">
    </item>
    <item
        android:id="@+id/invitations"
        android:showAsAction="never"
        android:title="@string/invitations">
    </item>
    <!-- <item -->
    <!-- android:id="@+id/inviteCnt" -->
    <!-- android:layout_toRightOf="@+id/invitations" -->
    <!-- android:showAsAction="never" -->
    <!-- android:title="@string/invitations"> -->
    <!-- </item> -->
    <TextView
        android:id="@+id/inviteCnt"
        android:layout_toRightOf="@+id/invitations"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textCursorDrawable="@null" />

    <!-- <item -->
    <!-- android:id="@+id/myFollowers" -->
    <!-- android:showAsAction="never" -->
    <!-- android:title="@string/my_followers"> -->
    <!-- </item> -->
    <!-- <item -->
    <!-- android:id="@+id/followersCnt" -->
    <!-- android:layout_toRightOf="@+id/myFollowers" -->
    <!-- android:showAsAction="never" -->
    <!-- android:title="@string/invitations"> -->
    <!-- </item> -->
    <TextView
        android:id="@+id/followersCnt"
        android:layout_toRightOf="@+id/myFollowers"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textCursorDrawable="@null" />

    <item
        android:id="@+id/menuSignup"
        android:showAsAction="never"
        android:title="@string/signout_menu">
    </item>

</menu>