<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayoutSignUp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/app_page" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="170dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/thosearoundme_logo" />

    <RelativeLayout
        android:id="@+id/relativeLayoutInnerSignUp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/gradient_bg"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/spCountrySignUp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="13dp"
            android:prompt="@string/country_hint" />

        <EditText
            android:id="@+id/etCountryCodeSignUp"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_below="@id/spCountrySignUp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/text_box"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:padding="6dp"
            android:textColor="#000000"
            android:textCursorDrawable="@null" >
        </EditText>

        <EditText
            android:id="@+id/etPhoneSignUp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/spCountrySignUp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="13dp"
            android:layout_toRightOf="@id/etCountryCodeSignUp"
            android:background="@drawable/text_box"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:padding="6dp"
            android:textColor="#000000"
            android:textCursorDrawable="@null" />

       

        <EditText
            android:id="@+id/etUsernameSignUp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/etPhoneSignUp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/text_box"
            android:hint="@string/uname_hint"
            android:inputType="text"
            android:padding="6dp"
            android:textColor="#000000"
            android:textCursorDrawable="@null" />
 <EditText
            android:id="@+id/etPwdSignUp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/etUsernameSignUp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/text_box"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textColor="#000000"
            android:textCursorDrawable="@null" />
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:layout_below="@+id/etPwdSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/proceed_button"
            android:text="@string/signup"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/login_suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnSignUp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/login_suggestion"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnLoginSignUp"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:layout_below="@id/login_suggestion"
            android:layout_centerHorizontal="true"
            android:background="@drawable/proceed_button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</RelativeLayout>