<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutWelcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_page"
    tools:context=".LogInActivity" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="170dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/thosearoundme_logo" />

    <RelativeLayout
        android:id="@+id/relativeLayoutInnerWelcome"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/gradient_bg"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/Welcometxt"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/welcome_msg"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@android:color/holo_green_light" />

        <TextView
            android:id="@+id/appVersionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/app_version"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnLoginWelcome"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_alignBaseline="@+id/btnSignUpWelcome"
            android:layout_alignBottom="@+id/btnSignUpWelcome"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/proceed_button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnSignUpWelcome"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_above="@+id/appVersionTxt"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/proceed_button"
            android:text="@string/signup"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>