<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_page" 
    android:id="@+id/relativeLayoutForgotPwd">
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="170dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/thosearoundme_logo" />

    <RelativeLayout
        android:id="@+id/relativeLayoutInnerForgotPwd"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/gradient_bg"
        android:orientation="vertical" >
        
        <EditText
            android:id="@+id/etPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/text_box"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:padding="6dp"
            android:textCursorDrawable="@null"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnSubmitForgotPwd"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_below="@id/etPhoneNum"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/proceed_button"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>
